# segmentation-sounds

./: CMakeLists.txt  README.md  osc.csd  oscsend.cpp  oscsend.h  segm2cs.cpp
